@@ -30,7 +30,7 @@
     </tr>
 </f:if>
 <f:if condition="{settings.showCartAction.summary.fields.cart.taxes}">
-    <f:render partial="Mail/TaxList" arguments="{taxes: cart.taxes}"/>
+    <f:render partial="Mail/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.taxes}"/>
 </f:if>
 
 <f:if condition="{cart.discountGross}">
@@ -59,7 +59,7 @@
         </tr>
     </f:if>
     <f:if condition="{settings.showCartAction.summary.fields.discount.taxes}">
-        <f:render partial="Cart/OrderForm/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.discountTaxes}"/>
+        <f:render partial="Mail/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.discountTaxes}"/>
     </f:if>
 </f:if>
 
@@ -88,7 +88,7 @@
     </tr>
 </f:if>
 <f:if condition="{settings.showCartAction.summary.fields.service.taxes}">
-    <f:render partial="Mail/TaxList" arguments="{taxes: cart.serviceTaxes}"/>
+    <f:render partial="Mail/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.serviceTaxes}"/>
 </f:if>
 
 <f:if condition="{settings.showCartAction.summary.fields.total.net}">
@@ -116,5 +116,5 @@
     </tr>
 </f:if>
 <f:if condition="{settings.showCartAction.summary.fields.total.taxes}">
-    <f:render partial="Mail/TaxList" arguments="{taxes: cart.totalTaxes}"/>
+    <f:render partial="Mail/TaxList" arguments="{taxClasses: cart.taxClasses, taxes: cart.totalTaxes}"/>
 </f:if>
